# LongestSequence

./: CMakeLists.txt  README.md  main.py
lib/: CMakeLists.txt
lib/include/: pointsStack.h  traverser.h
lib/src/: pointsStack.c  traverser.c
